--- a/ERP.DataModel/ERP.DataModel.csproj
+++ b/ERP.DataModel/ERP.DataModel.csproj
@@ -114,9 +114,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FinancialAccounting\Contexts\DataModel.cs" />
-    <Compile Include="Migrations\201612281944470_Initial.cs" />
-    <Compile Include="Migrations\201612281944470_Initial.Designer.cs">
-      <DependentUpon>201612281944470_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201804111751407_UpdateDB1.cs" />
+    <Compile Include="Migrations\201804111751407_UpdateDB1.Designer.cs">
+      <DependentUpon>201804111751407_UpdateDB1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -134,8 +134,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612281944470_Initial.resx">
-      <DependentUpon>201612281944470_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201804111751407_UpdateDB1.resx">
+      <DependentUpon>201804111751407_UpdateDB1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
